fix: overflow hidden for animated gradient bg

--- a/public/styles.css
+++ b/public/styles.css
@@ -184,12 +184,18 @@ h3 > a {
 }
 
 /* Mobile Optimization */
-
 @media screen and (max-width: 768px) {
   #root {
     float: none;
     width: auto;
     margin: 0;
+    overflow: hidden;
+  }
+  body {
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    overflow: hidden;
   }
   * {
     font-size: 14px;
