--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 /* scrollbar */
 ::-webkit-scrollbar {
   width: 5px;
-  height: 5px;
 }
 
 /* Track */
@@ -11,6 +10,6 @@
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #fff;
+  background: #e0deff36;
   border-radius: 25px;
 }
